--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-html, body{
-    margin: 0;
-    padding: 0;
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-items{
+    list-style: none;
+    display: flex;
+    
+}
+.nav-items > li{
+    padding: 10px;
+}
+.img{
+    width: 50px;
+    height: 100%;
 }
