--- a/src/style.css
+++ b/src/style.css
@@ -5,15 +5,70 @@
 body {
   margin: 0;
   font-family: Inter, sans-serif;
-  background-color: #282d35;
+  background-color: var(--primary-color);
 }
+/* dark mode */
+:root{
+  --primary-color: #fff;
+  --secondary-color: #282d35;
+}
+.dark-theme{
+  --primary-color: #282d35;
+  --secondary-color: #fff;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 25px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+   background-color: #ccc;
+  border-radius: 34px;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 4px;
+  bottom: 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+input:checked + .slider {
+  background-color: #2196F3;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+/* .............. */
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 90px;
-  background-color: #21222a;
+  background-color: var(--primary-color);
   padding: 30px 25px;
+  box-shadow: 0 0 3px #ccc;
 }
 .nav-items {
   list-style: none;
@@ -30,7 +85,7 @@ body {
 }
 .main {
   padding: 57px 27px;
-  color: #fff;
+  color: var(--secondary-color);
 }
 .main > h1 {
   margin: 0;
@@ -52,5 +107,5 @@ body {
 .foot {
     font-weight: 100;
     padding: 8px 4px;
-    background-color: #21222A;
+    background-color: var(--primary-color);
 }
